# littlescript

./: .gitignore  CMakeLists.txt  README.md  assembler.hpp  lexer.hpp  main.cxx  memory.hpp  parser.hpp  utils.hpp
